# dri-geospatial-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pipeline.yml
data/: test_raster_3857_cog_rendered.tif  test_vector_4326.geojson
docs/: Makefile  conf.py
docs/sources/: modules.rst  mypackage.rst
src/geospatial_api/: __init__.py  __main__.py  cache.py  config.py  main.py  metrics.py  settings.py  utils.py
src/geospatial_api/__assets__/: config.env  log_config.yaml
src/geospatial_api/routers/: cached_titiler.py  healthcheck.py  main.py  titiler_main.py  vector_main.py
tests/: conftest.py  test_utils.py
tests/routers/: test_healthcheck.py  test_main.py  test_titler.py  test_vector.py
