[build-system]
requires = ["setuptools >= 61.0", "autosemver"]

[project]
requires-python = ">=3.12"
dependencies = [
    "aiocache",
    "autosemver",
    "dri-utils[all] @ git+https://github.com/NERC-CEH/dri-utils.git",
    "fastapi",
    "fastapi[standard]",
    "setuptools",
    "httpx",
    "prometheus-fastapi-instrumentator",
    "pyright[nodejs]",
    "pydantic-settings",
    "pre-commit",
    "boto3>=1.36.24",
    "mypy_boto3_s3",
    "geojson",
    "titiler",
    "titiler.extensions",

]
name = "geospatial_api"
dynamic = ["version"]
authors = [{ name = "Samantha Hewkin", email = "samhew@ceh.ac.uk" }]
description = "API for accessing geospatial data products"

[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = [
  { include-group = "test"},
  { include-group = "docs"},
  { include-group = "lint"},
]

[tool.setuptools.dynamic]
version = { attr = "geospatial_api.__version__" }

[tool.pytest.ini_options]
addopts = "--cov=."
markers = [
    "slow: Marks slow tests",
]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.coverage.run]
omit = ["*__init__.py", "src/geospatial_api/__main__.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "A", "PLC", "PLE", "PLW", "I", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true
